--- a/portfolio/src/main/resources/static/styles/project/addEditImportantDate.css
+++ b/portfolio/src/main/resources/static/styles/project/addEditImportantDate.css
@@ -33,7 +33,8 @@
     border: none;
     border-radius: 5px;
     height: 40px;
-    border-bottom: 2px solid lightgray;
+    background-color: var(--surface-highlight);
+    color: var(--text-surface);
     padding-left: 5px;
 }
 
@@ -47,20 +48,20 @@
     padding: 0;
     margin-bottom: 1rem;
     background-color: var(--primary-highlight);
-    border: 1px solid var(--primary-highlight);
+    border: 1px none;
     border-radius: 8px;
     overflow: hidden;
 
     height: 3rem;
     line-height: 3rem;
     text-align: center;
-    color: black;
+    color: var(--text-surface);
     font-size: 1rem;
     text-decoration: none;
 }
 
 /*Add some hover effects to buttons */
 #form__body button:hover, #form__body a:hover {
-    filter: brightness(80%);
+    filter: brightness(85%);
     cursor: pointer;
 }
