--- a/portfolio/src/main/resources/templates/fragments/navbar.html
+++ b/portfolio/src/main/resources/templates/fragments/navbar.html
@@ -93,9 +93,18 @@
                         </h5>
                         <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
                             <div class="accordion-body">
-                                <div id="hellothere" class="form-check form-switch">
-                                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-                                    <label class="form-check-label" id="theme-toggle__label" for="flexSwitchCheckDefault">Dark</label>
+                                <div class="color-content__container">
+                                    <div class="accent-color__container">
+                                        <em id="accent-color__radio-1" class="accent-color__radio" onclick="updateRadioButton(this)"></em>
+                                        <em id="accent-color__radio-2" class="accent-color__radio" onclick="updateRadioButton(this)"></em>
+                                        <em id="accent-color__radio-3" class="accent-color__radio" onclick="updateRadioButton(this)"></em>
+                                        <em id="accent-color__radio-4" class="accent-color__radio" onclick="updateRadioButton(this)"></em>
+                                        <em id="accent-color__radio-5" class="accent-color__radio" onclick="updateRadioButton(this)"></em>
+                                    </div>
+                                    <div class="form-check form-switch">
+                                        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                                        <label class="form-check-label" id="theme-toggle__label" for="flexSwitchCheckDefault">Dark</label>
+                                    </div>
                                 </div>
                             </div>
                         </div>
