--- a/portfolio/src/main/resources/templates/templatesUser/editUser.html
+++ b/portfolio/src/main/resources/templates/templatesUser/editUser.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>Edit Profile</title>
     <link th:rel="stylesheet" th:href="@{webjars/bootstrap/5.1.3/css/bootstrap.min.css} "/>
+    <script th:src="@{webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
     <link rel="shortcut icon" type="image/ico" th:href="@{${@environment.getProperty('PORTFOLIO_CONTEXT')} + '/favicon.ico'}"/>
+    <link rel="stylesheet" th:href="@{styles/user/editUser.css}">
     <link th:href="@{styles/theme.css}" rel="stylesheet"/>
     <script defer rel="script" th:src="@{scripts/theme.js}"></script>
-    <link rel="stylesheet" th:href="@{styles/user/editUser.css}">
     <link rel="stylesheet" th:href="@{styles/stylesheet.css}">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.2/font/bootstrap-icons.css">
 
