--- a/portfolio/src/main/resources/static/styles/group/groups.css
+++ b/portfolio/src/main/resources/static/styles/group/groups.css
@@ -1,9 +1,13 @@
 
 /******************** Group Cards ********************/
 
-.group, #new-group-button {
+.group {
     position: relative;
     margin-bottom: 1rem;
+    padding-top: 0;
+    padding-bottom: 0;
+    border-radius: 8px;
+    background-color: var(--surface);
 }
 
 #group__header-div {
@@ -26,14 +30,6 @@
 }
 
 
-.group, #new-group-button, .group__button-wrapper button, #open-modal__button {
-    padding-top: 0;
-    padding-bottom: 0;
-    border-radius: 10px;
-    color: var(--text-surface);
-    background-color: var(--primary-highlight);
-    border: none;
-}
 
 .group__details-wrapper {
     position: relative;
@@ -45,11 +41,12 @@
     padding: 0;
     height: 5rem;
     line-height: 5rem;
+    color: var(--text-surface);
     cursor: pointer;
 }
 
 .group__name:hover {
-    filter: brightness(85%);
+    color: var(--primary-highlight);
 }
 
 .table {
@@ -60,10 +57,12 @@
     min-width: 400px;
     font-size: small;
     margin: 25px auto;
+    --bs-table-accent-bg: var(--surface);
+    --bs-table-hover-bg: var(--primary-highlight);
+    color: var(--text-surface);
 }
 
 .group__details {
-    border-top: 1px solid var(--color-accent);
     padding-top: 1rem;
     visibility: visible;
 }
@@ -77,17 +76,45 @@
     word-wrap: break-word;
 }
 
-.group__button-wrapper button{
-    /* Position & Size */
-    margin-right: 1rem;
-    padding: 0 1rem 0 1rem;
-    min-width: 4rem;
-    height: 3rem;
-    line-height: 3rem;
+.group__details-header {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
 
-    /* Text */
-    font-size: 1rem;
-    font-weight: 400;
+.group__details-button-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+#remove-user__button {
+    margin-right: 1rem;
+    border-radius: 8px;
+    min-width: 60px;
+    line-height: 3rem;
+    background-color: var(--primary-highlight);
+    color: var(--text-surface);
+    border: none;
+}
+
+#remove-user__button:hover {
+    filter: brightness(85%);
+}
+
+.group__button {
+    margin-right: 1rem;
+    border-radius: 8px;
+    min-width: 60px;
+    line-height: 3rem;
+    background-color: var(--primary-highlight);
+    color: var(--text-surface);
+    border: none;
+}
+
+.group__button:hover {
+    filter: brightness(85%);
 }
 
 .new-group__container {
@@ -113,6 +140,7 @@
 
 
 .selected {
+    color: var(--primary-highlight) !important;
     opacity: 0.8 !important;
 }
 
