--- a/portfolio/src/main/resources/templates/templatesGroup/groups.html
+++ b/portfolio/src/main/resources/templates/templatesGroup/groups.html
@@ -49,7 +49,26 @@
             </div>
             <div class="group" th:each="group : *{groups}" th:with="tableDropable=${user.isTeacher && !(group.getGroupId == TEACHER_GROUP_ID && !user.isTeacher)}" th:ondragover="${tableDropable} ? 'allowDrop(event)' : ''" th:ondrop="${tableDropable} ? 'pasteMembers(this)' : ''">
                 <div class="group__details-wrapper">
-                    <h2 class="group__name" th:text="${group.getShortName} + ' - ' + ${group.getLongName}" type="button" data-bs-toggle="collapse" th:data-bs-target="'#group_' + ${group.getGroupId}" aria-expanded="false" th:aria-controls="group_ + ${group.getGroupId}"></h2>
+                    <div class="group__details-header">
+                        <h2 class="group__name" th:text="${group.getShortName} + ' - ' + ${group.getLongName}" type="button" data-bs-toggle="collapse" th:data-bs-target="'#group_' + ${group.getGroupId}" aria-expanded="false" th:aria-controls="group_ + ${group.getGroupId}"></h2>
+                        <button id="remove-user__button" onclick="removeSelectedUsers(this)" hidden="hidden" th:class="'group_' + ${group.getGroupId} + '_remove_users_button'">Remove Selected Users</button>
+                            <div class="group__details-button-container">
+                                <form th:action="@{group-{id}(id=${group.getGroupId})}" th:method="get" th:if="${group.getGroupId} >= 0")>
+                                    <button class="group__button" type="submit">View</button>
+                                </form>
+                                <div class="flex-row" th:if="${user.isTeacher || #lists.contains(group.getMembers, user)}">
+                                    <button th:id="${group.getGroupId}" th:data-group-id="group_ + ${group.getGroupId}" onclick="copyHere(this.getAttribute('data-group-id'))" hidden="hidden" th:class="groups__copy-member-mobile">Copy</button>
+                                    <form th:action="@{editGroup-{id}(id=${group.getGroupId})}" th:method="get" th:if="${group.getGroupId} >= 0")>
+                                        <button class="group__button" type="submit">Edit</button>
+                                    </form>
+                                </div>
+                                <div class="flex-row" th:if="${user.isTeacher}">
+                                    <form th:id="'group_' + ${group.getGroupId} + '_delete_button'" th:action="@{editGroup-{id}(id=${group.getGroupId})}" th:if="${group.getGroupId} >= 0" th:number-of-members="${group.getMembers().size()}" th:onSubmit="return confirm('Are you sure you want to delete this group?\nDoing so will remove ' + this.getAttribute('number-of-members') + ' member(s) from the group.\nThis action cannot be undone.')" th:method="delete" >
+                                        <button class="group__button"  type="submit">Delete</button>
+                                    </form>
+                                </div>
+                            </div>
+                    </div>
                     <div class="group__details collapse" th:id="group_ + ${group.getGroupId}">
                         <h4>Members</h4>
                         <div class="group__members-wrapper">
@@ -80,23 +99,23 @@
                         </div>
                     </div>
                     <!-- Edit and Delete Group Buttons - Only show if user is a teacher-->
-                    <div class="group__button-wrapper flex-row">
-                        <form th:action="@{group-{id}(id=${group.getGroupId})}" th:method="get" th:if="${group.getGroupId} >= 0")>
-                            <button type="submit">View</button>
-                        </form>
-                        <div class="flex-row" th:if="${user.isTeacher || #lists.contains(group.getMembers, user)}">
-                            <button th:id="${group.getGroupId}" th:data-group-id="group_ + ${group.getGroupId}" onclick="copyHere(this.getAttribute('data-group-id'))" hidden="hidden" th:class="groups__copy-member-mobile">Copy</button>
-                            <button onclick="removeSelectedUsers(this)" hidden="hidden" th:class="'group_' + ${group.getGroupId} + '_remove_users_button'">Remove Selected Users</button>
-                            <form th:action="@{editGroup-{id}(id=${group.getGroupId})}" th:method="get" th:if="${group.getGroupId} >= 0")>
-                                <button type="submit">Edit</button>
-                            </form>
-                        </div>
-                        <div class="flex-row" th:if="${user.isTeacher}">
-                            <form th:id="'group_' + ${group.getGroupId} + '_delete_button'" th:action="@{editGroup-{id}(id=${group.getGroupId})}" th:if="${group.getGroupId} >= 0" th:number-of-members="${group.getMembers().size()}" th:onSubmit="return confirm('Are you sure you want to delete this group?\nDoing so will remove ' + this.getAttribute('number-of-members') + ' member(s) from the group.\nThis action cannot be undone.')" th:method="delete" >
-                                <button type="submit">Delete</button>
-                            </form>
-                        </div>
-                    </div>
+<!--                    <div class="group__button-wrapper flex-row">-->
+<!--                        <form th:action="@{group-{id}(id=${group.getGroupId})}" th:method="get" th:if="${group.getGroupId} >= 0")>-->
+<!--                            <button type="submit">View</button>-->
+<!--                        </form>-->
+<!--                        <div class="flex-row" th:if="${user.isTeacher || #lists.contains(group.getMembers, user)}">-->
+<!--                            <button th:id="${group.getGroupId}" th:data-group-id="group_ + ${group.getGroupId}" onclick="copyHere(this.getAttribute('data-group-id'))" hidden="hidden" th:class="groups__copy-member-mobile">Copy</button>-->
+<!--                            <button onclick="removeSelectedUsers(this)" hidden="hidden" th:class="'group_' + ${group.getGroupId} + '_remove_users_button'">Remove Selected Users</button>-->
+<!--                            <form th:action="@{editGroup-{id}(id=${group.getGroupId})}" th:method="get" th:if="${group.getGroupId} >= 0")>-->
+<!--                                <button type="submit">Edit</button>-->
+<!--                            </form>-->
+<!--                        </div>-->
+<!--                        <div class="flex-row" th:if="${user.isTeacher}">-->
+<!--                            <form th:id="'group_' + ${group.getGroupId} + '_delete_button'" th:action="@{editGroup-{id}(id=${group.getGroupId})}" th:if="${group.getGroupId} >= 0" th:number-of-members="${group.getMembers().size()}" th:onSubmit="return confirm('Are you sure you want to delete this group?\nDoing so will remove ' + this.getAttribute('number-of-members') + ' member(s) from the group.\nThis action cannot be undone.')" th:method="delete" >-->
+<!--                                <button type="submit">Delete</button>-->
+<!--                            </form>-->
+<!--                        </div>-->
+<!--                    </div>-->
                 </div>
             </div>
         </div>
