#feature Made the size of the user graphs consistent.

--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -50,7 +50,7 @@
         <button type="button" class="user-tab__button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1">
             <span>Portfolio</span>
         </button>
-        <button type="button" class="user-tab__button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2">
+        <button type="button" class="user-tab__button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" onclick="updateCharts()">
             <span>Statistics</span>
         </button>
     </div>
