--- a/portfolio/src/main/resources/static/styles/group/addEditGroup.css
+++ b/portfolio/src/main/resources/static/styles/group/addEditGroup.css
@@ -46,7 +46,7 @@
     height: 3rem;
     line-height: 3rem;
     text-align: center;
-    color: var(--text-surface);
+    color: black;
     font-size: 1rem;
     text-decoration: none;
     border: none;
