--- a/portfolio/src/main/resources/static/styles/group/group.css
+++ b/portfolio/src/main/resources/static/styles/group/group.css
@@ -50,11 +50,15 @@ html {
     padding: 0 1rem 0 1rem;
     min-width: 4rem;
     height: 3rem;
-    line-height: 3rem;
+    line-height: 2rem;
 
     /* Text */
     font-size: 1rem;
     font-weight: 400;
+    background: var(--primary-highlight);
+    border: none;
+    border-radius: 8px;
+
 }
 
 .group__button-wrapper button:hover {
