--- a/portfolio/src/main/resources/templates/fragmentsUser/profile.html
+++ b/portfolio/src/main/resources/templates/fragmentsUser/profile.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <link rel="stylesheet" th:href="@{styles/user/profile.css}">
 
-<div class="container">
+<div class="profile__container">
     <div class="card profile-pic__row">
         <div class="profile-pic__content">
             <img th:src="${pageUser.profileImagePath}" class="card-img-top profile-image" alt="profilePhoto">
