--- a/portfolio/src/main/resources/templates/templatesUser/user.html
+++ b/portfolio/src/main/resources/templates/templatesUser/user.html
@@ -38,6 +38,7 @@
 <nav th:replace="fragments/navbar :: navbar"></nav>
 
 <div id="page-content" class="constrict">
+  <div class="user-page__wrapper">
 <!-- User Header -->
     <div id="user-header">
         <header class="user-header flex-column">
@@ -70,7 +71,7 @@
             </div>
         </div>
     </div>
-
+  </div>
 </div>
 </body>
 
