#Feature make project tabs highlight on active tab.

--- a/portfolio/src/main/resources/templates/templatesProject/teacherProjectDetails.html
+++ b/portfolio/src/main/resources/templates/templatesProject/teacherProjectDetails.html
@@ -49,7 +49,7 @@
             <p id="project__description" th:text="${project.getDescription()}"></p>
         </div>
         <div class="carousel-buttons flex-row">
-          <button type="button" class="projects__tab-button" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0">
+          <button type="button" class="projects__tab-button active-carousel-tab" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0">
             <span>All</span>
           </button>
           <button type="button" class="projects__tab-button" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1">
@@ -61,7 +61,7 @@
           <button type="button" class="projects__tab-button" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3">
             <span>Deadlines</span>
           </button>
-          <button type="button" class="projects__tab-button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4">
+          <button type="button" class="projects__tab-button" onclick="makeActive(this)" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4">
             <span>Milestones</span>
           </button>
         </div>
