--- a/portfolio/src/main/resources/static/styles/theme.css
+++ b/portfolio/src/main/resources/static/styles/theme.css
@@ -1,6 +1,6 @@
 :root {
     --berry: #ef798a;
-    --forest: #b5d99c;
+    --forest: #84c059;
     --peach: #f6b08b;
     --steel: #bbadf0;
     --cobalt: #9bbeff;
