#feature #testmanual made commits load in the background on the add evidence page to speed up the page load time

--- a/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
@@ -190,6 +190,7 @@ p {
     align-items: left;
     border-bottom: 1px solid #dee2e6;
     margin-bottom: 5px;
+    overflow-wrap: anywhere;
 }
 
 .commit-tag-outside {
