#feature styled the add commit button and error message

--- a/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
@@ -75,6 +75,11 @@
     font-size: small;
     margin-top: -5px;
     margin-bottom: 10px;
+    padding-top: 15px;
+}
+
+.evidence-form__add-commits-button-wrapper {
+    display: flex;
 }
 
 .evidence-form__add-commits-button {
