--- a/portfolio/src/main/resources/templates/fragments/evidence.html
+++ b/portfolio/src/main/resources/templates/fragments/evidence.html
@@ -38,7 +38,7 @@
                     <div class="user-tag-inside">
                         <img class="user-tag-image" th:src="${user.getProfileImagePath()}" alt="Profile Photo">
                         <div class="user-tag-text" >
-                            <a class="user-tag-fullName" th:href="@{profile-{id}(id=${user.getId()})}" th:text="${user.getFullName()}"></a>
+                            <a class="user-tag-fullName" th:href="@{profile-{id}(id=${user.getId()})}" th:text=" ${user.getId() == evidence.getOwnerId()} ? ${user.getFullName()} + ' (Author)' : ${user.getFullName()} + ''"></a>
                             <p class="user-tag-nickname" th:text="${user.getUsername()}"></p>
                         </div>
                     </div>
