--- a/portfolio/src/main/resources/static/styles/user/registerPage.css
+++ b/portfolio/src/main/resources/static/styles/user/registerPage.css
@@ -68,7 +68,7 @@ body{
 
 .wrapper form .row{
     height: 40px;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     position: relative;
 }
 
@@ -152,9 +152,10 @@ form .row input::placeholder{
 form .signup-link a:hover{
     text-decoration: underline;
 }
-p{
+.form-error-message {
     color: red;
     text-align: center;
+    font-size: small;
 }
 
 .helper {
