--- a/portfolio/src/main/resources/static/styles/project/projectSummaries.css
+++ b/portfolio/src/main/resources/static/styles/project/projectSummaries.css
@@ -49,9 +49,11 @@ html {
     padding: 0;
     height: 5rem;
     line-height: 5rem;
-
     cursor: pointer;
     width: calc(100% - 25rem);
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 .project__name:hover {
