--- a/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/addEvidence.css
@@ -43,7 +43,8 @@
 
 #evidence-form__form input, #evidence-form__form textarea {
     border: none;
-    border-bottom: 2px solid lightgray;
+    background-color: var(--surface-highlight);
+    color: var(--text-surface);
     border-radius: 5px;
     height: 40px;
     padding-left: 10px;
@@ -158,7 +159,8 @@ p {
     display: block;
     margin-bottom: 1rem;
     border-radius: 5px;
-    background: #fff;
+    background-color: var(--surface-highlight);
+    color: var(--text-surface);
 }
 
 #skill-container {
@@ -225,7 +227,8 @@ p {
 #user-input-container {
     display: block;
     margin-bottom: 1rem;
-    background: #fff;
+    background-color: var(--surface-highlight);
+    color: var(--text-surface);
     border-radius: 5px;
 }
 
