--- a/portfolio/src/main/resources/static/styles/user/changePassword.css
+++ b/portfolio/src/main/resources/static/styles/user/changePassword.css
@@ -107,6 +107,7 @@ form .row input::placeholder{
     border: 1px solid var(--primary-highlight);
     border-radius: 8px;
     background-color: var(--primary-highlight);
+    color: var(--text-surface-highlight);
     padding: 0 2rem 0 2rem;
     margin-top: 1rem;
 }
