--- a/portfolio/src/main/resources/static/styles/project/addEditImportantDate.css
+++ b/portfolio/src/main/resources/static/styles/project/addEditImportantDate.css
@@ -51,11 +51,10 @@
     border: 1px none;
     border-radius: 8px;
     overflow: hidden;
-
+    color: var(--text-surface-highlight);
     height: 3rem;
     line-height: 3rem;
     text-align: center;
-    color: var(--text-surface);
     font-size: 1rem;
     text-decoration: none;
 }
