--- a/portfolio/src/main/resources/static/styles/project/addEditSprint.css
+++ b/portfolio/src/main/resources/static/styles/project/addEditSprint.css
@@ -52,11 +52,10 @@ body {
     padding: 0;
     margin-bottom: 1rem;
     background-color: var(--primary-highlight);
-    color: var(--text-surface);
+    color: var(--text-surface-highlight);
     border: none;
     border-radius: 8px;
     overflow: hidden;
-
     height: 3rem;
     line-height: 3rem;
     text-align: center;
