--- a/portfolio/src/main/resources/static/styles/group/groups.css
+++ b/portfolio/src/main/resources/static/styles/group/groups.css
@@ -37,7 +37,7 @@
 }
 
 .group__name {
-    margin: 0 15rem 0 0;
+    margin: 0;
     padding: 0;
     height: 5rem;
     line-height: 5rem;
@@ -49,7 +49,7 @@
 }
 
 .group__name:hover {
-    color: var(--primary-highlight);
+    color: var(--outline);
 }
 
 .table {
@@ -67,7 +67,6 @@
 
 .table-active {
     --bs-table-accent-bg: none !important;
-
 }
 
 .group__details {
@@ -97,15 +96,16 @@
     display: flex;
     flex-direction: row;
     align-items: center;
+    gap: 1rem;
 }
 
 #remove-user__button {
-    margin-right: 1rem;
+    /*margin-right: 1rem;*/
     border-radius: 8px;
-    min-width: 60px;
+    min-width: fit-content;
     line-height: 3rem;
     background-color: var(--primary-highlight);
-    color: var(--text-surface);
+    color: var(--text-surface-highlight);
     border: none;
 }
 
@@ -114,12 +114,12 @@
 }
 
 .group__button {
-    margin-right: 1rem;
+    /*margin-right: 1rem;*/
     border-radius: 8px;
-    min-width: 60px;
+    min-width: fit-content;
     line-height: 3rem;
     background-color: var(--primary-highlight);
-    color: var(--text-surface);
+    color: var(--text-surface-highlight);
     border: none;
 }
 
@@ -137,7 +137,7 @@
 #new-group__button {
     padding: 10px;
     background-color: var(--primary-highlight);
-    color: var(--text-surface);
+    color: var(--text-surface-highlight);
     border: none;
     border-radius: 8px;
     font-size: 20px;
@@ -151,10 +151,5 @@
 
 .selected {
     color: var(--surface-highlight);
-    /*filter: brightness(var(--brightness));*/
     background-color: var(--primary-highlight) !important;
 }
-
-/*#no-hover {*/
-/*    --bs-table-hover-bg: var(--color-complement);*/
-/*}*/
