#Feature Styled the likes modal

--- a/portfolio/src/main/resources/static/styles/evidence/evidence.css
+++ b/portfolio/src/main/resources/static/styles/evidence/evidence.css
@@ -456,3 +456,8 @@ p {
     max-height: 22rem;
     overflow-y: auto;
 }
+
+.evidence-likes__header {
+    background-color: var(--primary-highlight);
+    color: var(--text-surface-highlight);
+}
